--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "mkdocs-dracula-theme>=1.0.7",
+    "mkdocs>=1.6.1",
     "mypy>=1.15.0",
     "pytest>=8.3.4",
     "ruff>=0.9.7",
